--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
           <div class="intro-header">
             <div class="intro-header__overline">Welcome to</div>
             <h1 class="intro-header__big-type">
-              On<br />
-              TheRock
+              Lounge<br />
+              Cafe
             </h1>
           </div>
           <!-- end intro-header -->
